--- a/package.json
+++ b/package.json
@@ -1,30 +1,28 @@
 {
   "name": "coc-postfix",
-  "version": "0.0.0-development",
+  "version": "0.0.3",
   "description": "Postfix completion extension for coc.nvim",
   "author": "Heyward Fann <fannheyward@gmail.com>",
   "license": "MIT",
   "main": "lib/index.js",
-  "keywords": [
-    "coc.nvim"
-  ],
+  "keywords": [],
   "engines": {
     "coc": "^0.0.70"
   },
   "scripts": {
     "clean": "rimraf lib",
     "watch": "tsc -p tsconfig.json --watch",
-    "build": "tsc -p tsconfig.json",
-    "prepare": "npm-run-all clean build"
+    "build": "tsc -p tsconfig.json"
+  },
+  "dependencies": {
+    "glob": "^7.1.6",
+    "vscode-languageserver-protocol": "3.15.0-next.14"
   },
   "devDependencies": {
     "@types/glob": "^7.1.1",
     "@types/node": "^12.12.14",
     "coc.nvim": "^0.0.74",
-    "glob": "^7.1.6",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.7.3",
-    "vscode-languageserver-protocol": "^3.15.0-next.14"
+    "typescript": "^3.7.3"
   },
   "contributes": {
     "configuration": {
