--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
     "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
-    "glob": "^7.1.6",
+    "tiny-glob": "^0.2.6",
     "vscode-languageserver-protocol": "3.15.0-next.14"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.1",
     "@types/node": "^12.12.14",
     "coc.nvim": "^0.0.74",
     "typescript": "^3.7.3"
@@ -29,18 +28,13 @@
       "type": "object",
       "title": "coc-postfix configuration",
       "properties": {
-        "coc-postfix.enabled": {
+        "postfix.enabled": {
           "type": "boolean",
           "default": true,
           "description": "Enable coc-postfix extension"
         }
       }
     },
-    "commands": [
-      {
-        "command": "coc-postfix.Command",
-        "title": "coc-postfix command title"
-      }
-    ]
+    "commands": []
   }
 }
