--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean": "rimraf lib",
     "lint": "eslint src --ext ts",
     "watch": "tsc -p tsconfig.json --watch",
-    "build": "tsc -p tsconfig.json"
+    "build": "rimraf lib && tsc -p tsconfig.json"
   },
   "dependencies": {
     "tiny-glob": "^0.2.6",
@@ -28,6 +28,7 @@
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^1.19.1",
+    "rimraf": "^3.0.0",
     "typescript": "^3.7.3"
   },
   "prettier": {
