--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "tiny-glob": "^0.2.6",
-    "vscode-languageserver-protocol": "3.15.3"
+    "vscode-languageserver-protocol": "3.15.3",
+    "vscode-languageserver-textdocument": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^14.0.6",
