--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/node": "^15.0.0",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
-    "coc.nvim": "^0.0.79",
+    "coc.nvim": "^0.0.81-next.3",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
